syntax = "proto3";

package events.v1;

option go_package = "github.com/rocker-crm/shared/pkg/proto/events/v1;events_v1";

// OrderPaidRecorder - структура данных для заказа
message OrderPaidRecorder {
  string event_uuid = 1;
  string order_uuid = 2;
  string user_uuid = 3;
  string payment_method = 4;
  string transaction_uuid = 5;
}

// ShipAssembledRecorder - структура данных для выполненного заказа
message ShipAssembledRecorder {
  string event_uuid = 1;
  string order_uuid = 2;
  string user_uuid = 3;
  int64 build_time_sec = 4;
}